2022-01-08 Richard Frith-Macdonald <rfm@gnu.org>

	* ChangeLog: Update for new release
	* ANNOUNCE:
	* NEWS:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	Update release notes for 1.29.0 release.
	* Version: bump to 1.29.0

2022-12-28 Richard Frith-Macdonald <rfm@gnu.org>

	* ChangeLog: Update for new release
	* ANNOUNCE:
	* NEWS:
	* NSTimeZones/NSTimeZones.tar: update
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	Update release notes for 1.28.1 release.
	* Version: bump to 1.28.1

2022-12-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: do not process end tag if parsing was aborted
	while processing start tag.

2022-11-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Use the https_proxy and http_proxy
	environment variables if no proxying is specified. Also support
	those keys as properties in the request (overriding the environment
	variables) and support the URL protection spece if set.

2022-11-26 Fred Kiefer <fredkiefer@gmx.de>

	* Source/Additions/GSXML.m: Remove usage of deprecated function
	when a newer version of libxml is used.

2022-11-25  Florian Weimer

	* config/config.poll-dev.c:
	* config/config.proccmd.c:
	* config/config.reuseaddr.c:
	* config/config.vasprintf.c:
	* config/config.vsprintf.c:
	Make config tests work with C99 compiler

2022-11-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSFileManager.m:
	Call NSDirectoryEnumerator's constructor with either YES or NO for
	the BOOL arguments.
	Really skip hidden files in enumerations if requested by the
	options.

2022-11-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSFileHandle.h:
	* Headers/GNUstepBase/GSTLS.h:
	* Source/GSHTTPURLHandle.m:
	* Source/GSSocketStream.m:
	* Source/GSTLS.m:
	* Source/NSURLProtocol.m:
	* Source/externs.m:
	Fixup to use strict rfc4514 for distinguished names of issuer and
	owner of certificates.  Add GSTLSIssuers and GSTLSOwners properties